Add verify otp endpoint
